--- a/web/form_sample.html
+++ b/web/form_sample.html
@@ -18,7 +18,11 @@
 
 			</section>
 			<section>
-				<h2></h2>
+				<h2>Test Push</h2>
+				<label for="testPush">Test Push:</label><br>
+				<input type="checkbox" name="testPush" id="testPush" value="yes"><br>
+				<label for="testPush">Test Push</label><br>
+				<input type="checkbox" name="testPush" id="testPush2" value="no"><br>
 
 			</section>
 			<section>
