--- a/web/form_sample.html
+++ b/web/form_sample.html
@@ -12,9 +12,13 @@
 			<section>
 				<h2>Identification</h2>
 				<label for="firstName">First Name:</label><br>
-				<input type="text" name="firstName" id="firstName" autocapitalize="On"><br><br>
+				<input type="text" name="firstName" id="firstName" autocapitalize="On" required><br><br>
 				<label for="lastName">Last Name:</label><br>
 				<input type="text" name="lastName" id="lastName"><br>
+				<label for="submit">Submit:</label><br>
+				<input type="submit" name="submit" id="submit" value="Submit"><br>
+				<label for="reset">Reset:</label><br>
+				<input type="reset" name="reset" id="reset" value="Reset"><br>
 
 			</section>
 			<section>
