Add a <select> group

--- a/web/form_sample.html
+++ b/web/form_sample.html
@@ -12,34 +12,38 @@
 			<section>
 				<h2>Identification</h2>
 				<label for="firstName">First Name:</label><br>
-				<input type="text" name="firstName" id="firstName" autocapitalize="On" required><br><br>
+				<input type="text" name="firstName" id="firstName" autocapitalize="On" required autofocus><br><br>
 				<label for="lastName">Last Name:</label><br>
 				<input type="text" name="lastName" id="lastName"><br>
+
+			</section>
+
+			<section>
+				<h2>Interactive Elements</h2>
+				<label for="coffee">Using &ltselect&gt for Favorite Food</label><br>
+				<select name="coffee" id="coffee">
+					<optgroup label="Coffees">
+					<option value="regular coffee">Regular Coffee</option>
+					<option value="iced coffee">Iced Coffee</option>
+					</optgroup>
+					<optgroup label="Espresso Drinks">
+					<option value="cappuccino" selected>Cappuccino</option>
+					<option value="latte">Latte</option>
+					<option value="americano">Americano</option>
+					<option value="other">Other</option>
+					</optgroup>
+				</select>
+			</section>
+			<section>
+				<h2></h2>
+			</section>
+
+			<section>
+				<h2>Submit</h2>
 				<label for="submit">Submit:</label><br>
 				<input type="submit" name="submit" id="submit" value="Submit"><br>
 				<label for="reset">Reset:</label><br>
 				<input type="reset" name="reset" id="reset" value="Reset"><br>
-
-			</section>
-			<section>
-				<h2>Test Push</h2>
-				<label for="testPush">Test Push:</label><br>
-				<input type="checkbox" name="testPush" id="testPush" value="yes"><br>
-				<label for="testPush">Test Push</label><br>
-				<input type="checkbox" name="testPush" id="testPush2" value="no"><br>
-
-			</section>
-			<section>
-				<h2></h2>
-
-			</section>
-			<section>
-				<h2></h2>
-
-			</section>
-			<section>
-				<h2></h2>
-
 			</section>
 		</form>
 	</article>
