Add additional attributes to the <select> element

--- a/web/form_sample.html
+++ b/web/form_sample.html
@@ -20,20 +20,22 @@
 
 			<section>
 				<h2>Interactive Elements</h2>
-				<label for="coffee">Using &ltselect&gt for Favorite Food</label><br>
-				<select name="coffee" id="coffee">
+				<label for="coffee">Using the &ltselect&gt Element</label>
+				<select name="coffee" id="coffee" multiple size="8">
 					<optgroup label="Coffees">
-					<option value="regular coffee">Regular Coffee</option>
-					<option value="iced coffee">Iced Coffee</option>
+						<option value="regular coffee">Regular Coffee</option>
+						<option value="iced coffee">Iced Coffee</option>
 					</optgroup>
+					<hr>
 					<optgroup label="Espresso Drinks">
-					<option value="cappuccino" selected>Cappuccino</option>
-					<option value="latte">Latte</option>
-					<option value="americano">Americano</option>
-					<option value="other">Other</option>
+						<option value="cappuccino">Cappuccino</option>
+						<option value="latte">Latte</option>
+						<option value="americano">Americano</option>
+						<option value="other">Other</option>
 					</optgroup>
 				</select>
 			</section>
+
 			<section>
 				<h2></h2>
 			</section>
