--- a/web/form_sample.html
+++ b/web/form_sample.html
@@ -20,7 +20,8 @@
 
 			<section>
 				<h2>Interactive Elements</h2>
-				<label for="coffee">Using the &ltselect&gt Element</label>
+				<h3>The &ltselect&gt Element</h3>
+				<label for="coffee">Favorite Coffee:</label><br>
 				<select name="coffee" id="coffee" multiple size="8">
 					<optgroup label="Coffees">
 						<option value="regular coffee">Regular Coffee</option>
