Remove submit heading

--- a/web/form_sample.html
+++ b/web/form_sample.html
@@ -42,11 +42,9 @@
 			</section>
 
 			<section>
-				<h2>Submit</h2>
-				<label for="submit">Submit:</label><br>
-				<input type="submit" name="submit" id="submit" value="Submit"><br>
-				<label for="reset">Reset:</label><br>
-				<input type="reset" name="reset" id="reset" value="Reset"><br>
+				<hr>
+				<input type="submit" name="submit" id="submit" value="Submit">
+				<input type="reset" name="reset" id="reset" value="reset"><br>
 			</section>
 		</form>
 	</article>
