Begin a checkbox section and practice boilerplate

--- a/web/form_sample.html
+++ b/web/form_sample.html
@@ -10,12 +10,13 @@
 	<article>
 		<form action="https://httpbin.org/post" method="post">
 			<section>
-				<h2>Identification</h2>
-				<label for="firstName">First Name:</label><br>
-				<input type="text" name="firstName" id="firstName" autocapitalize="On" required autofocus><br><br>
-				<label for="lastName">Last Name:</label><br>
-				<input type="text" name="lastName" id="lastName"><br>
-
+				<fieldset>
+					<legend>Contact Information</legend>
+					<label for="firstName">First Name:</label><br>
+					<input type="text" name="firstName" id="firstName" autocapitalize="On" required autofocus><br><br>
+					<label for="lastName">Last Name:</label><br>
+					<input type="text" name="lastName" id="lastName"><br>
+				</fieldset>
 			</section>
 
 			<section>
@@ -37,6 +38,31 @@
 				</select>
 			</section>
 
+			<section>
+				<p>Favorite Food:</p>
+				<label for="pizza"><input type="checkbox" name="food" id="pizza">Pizza</label>
+				<label for="tacos"><input type="checkbox" name="food"</label>
+
+			</section>
+
+			<section>
+				<h2></h2>
+			</section>
+			<section>
+				<h2></h2>
+			</section>
+			<section>
+				<h2></h2>
+			</section>
+			<section>
+				<h2></h2>
+			</section>
+			<section>
+				<h2></h2>
+			</section>
+			<section>
+				<h2></h2>
+			</section>
 			<section>
 				<h2></h2>
 			</section>
