Remove autocapitalize - it's already there on mobile

--- a/web/form_sample.html
+++ b/web/form_sample.html
@@ -10,14 +10,17 @@
 	<article>
 		<form action="https://httpbin.org/post" method="post">
 			<section>
+				<!-- Text fields with a fieldset -->
 				<fieldset>
 					<legend>Contact Information</legend>
 					<label for="firstName">First Name:</label><br>
-					<input type="text" name="firstName" id="firstName" autocapitalize="On" required autofocus><br><br>
+					<input type="text" name="firstName" id="firstName" required autofocus><br><br>
 					<label for="lastName">Last Name:</label><br>
 					<input type="text" name="lastName" id="lastName"><br>
 				</fieldset>
 			</section>
+
+<!--  -->
 
 			<section>
 				<h2>Interactive Elements</h2>
