Add phone number

--- a/web/form_sample.html
+++ b/web/form_sample.html
@@ -17,6 +17,8 @@
 					<input type="text" name="firstName" id="firstName" required autofocus><br><br>
 					<label for="lastName">Last Name:</label><br>
 					<input type="text" name="lastName" id="lastName"><br>
+					<label for="tel">Telephone Number</label>
+					<input type="tel" id="tel" name="tel">
 				</fieldset>
 			</section>
 
