--- a/web/form_sample.html
+++ b/web/form_sample.html
@@ -17,7 +17,7 @@
 					<input type="text" name="firstName" id="firstName" required autofocus><br><br>
 					<label for="lastName">Last Name:</label><br>
 					<input type="text" name="lastName" id="lastName"><br>
-					<label for="tel">Telephone Number</label>
+					<label for="tel">Telephone Number:</label><br>
 					<input type="tel" id="tel" name="tel">
 				</fieldset>
 			</section>
