Complete checkboxes and make radios

--- a/web/form_practice/form_sample.html
+++ b/web/form_practice/form_sample.html
@@ -1,90 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-</head>
-<body>
-	<h1>A Form Playground</h1>
-	<article>
-		<form action="https://httpbin.org/post" method="post">
-			<section>
-				<!-- Text fields with a fieldset -->
-				<fieldset>
-					<legend>Contact Information</legend>
-					<label for="firstName">First Name:</label><br>
-					<input type="text" name="firstName" id="firstName" required autofocus autocomplete="given-name"><br>
-					<label for="lastName">Last Name:</label><br>
-					<input type="text" name="lastName" id="lastName" autocomplete="family-name"><br>
-					<label for="tel">Telephone Number:</label><br>
-					<input type="tel" id="tel" name="tel" autocomplete="tel">
-				</fieldset>
-			</section>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <h1>A Form Playground</h1>
+    <article>
+      <form action="https://httpbin.org/post" method="post">
+        <section>
+          <!-- Text fields with a fieldset -->
+          <fieldset>
+            <legend>Contact Information</legend>
+            <label for="firstName">First Name:</label><br />
+            <input
+              type="text"
+              name="firstName"
+              id="firstName"
+              required
+              autofocus
+              autocomplete="given-name"
+            /><br />
+            <label for="lastName">Last Name:</label><br />
+            <input
+              type="text"
+              name="lastName"
+              id="lastName"
+              autocomplete="family-name"
+            /><br />
+            <label for="tel">Telephone Number:</label><br />
+            <input type="tel" id="tel" name="tel" autocomplete="tel" />
+          </fieldset>
+        </section>
 
-<!--  -->
+        <!--  -->
 
-			<section>
-				<h2>Interactive Elements</h2>
-				<h3>The &ltselect&gt Element</h3>
-				<label for="coffee">Favorite Coffee:</label><br>
-				<select name="coffee" id="coffee" multiple size="8">
-					<optgroup label="Coffees">
-						<option value="regular coffee">Regular Coffee</option>
-						<option value="iced coffee">Iced Coffee</option>
-					</optgroup>
-					<hr>
-					<optgroup label="Espresso Drinks">
-						<option value="cappuccino">Cappuccino</option>
-						<option value="latte">Latte</option>
-						<option value="americano">Americano</option>
-						<option value="other">Other</option>
-					</optgroup>
-				</select>
-			</section>
+        <section>
+          <h2>Interactive Elements</h2>
 
-			<section>
-			<h3>Checkboxes</h3>
-				<p>Favorite Food:</p>
-				<label for="pizza">
-				<input type="checkbox" name="food" id="pizza">Pizza</label><br>
-				<label for="tacos">
-				<input type="checkbox" name="food" id="tacos" value="tacos">Tacos</label><br>
+          <h3>The &ltselect&gt Element</h3>
+          <label for="coffee">Favorite Coffee:</label><br />
+          <select name="coffee" id="coffee" multiple size="8">
+            <optgroup label="Coffees">
+              <option value="regular coffee">Regular Coffee</option>
+              <option value="iced coffee">Iced Coffee</option>
+            </optgroup>
+            <hr />
+            <optgroup label="Espresso Drinks">
+              <option value="cappuccino">Cappuccino</option>
+              <option value="latte">Latte</option>
+              <option value="americano">Americano</option>
+              <option value="other">Other</option>
+            </optgroup>
+          </select>
+        </section>
 
-			</section>
+        <section>
+          <h3>Input <code>type="checkbox"</code></h3>
+          <p>Favorite Food:</p>
+          <input type="checkbox" name="food" id="pizza">
+					<label for="pizza">Pizza</label><br>
 
-			<section>
-				<h2></h2>
-			</section>
-			<section>
-				<h2></h2>
-			</section>
-			<section>
-				<h2></h2>
-			</section>
-			<section>
-				<h2></h2>
-			</section>
-			<section>
-				<h2></h2>
-			</section>
-			<section>
-				<h2></h2>
-			</section>
-			<section>
-				<h2></h2>
-			</section>
+          <input type="checkbox" name="food" id="tacos" value="tacos">
+					<label for="tacos">Tacos</label><br>
 
-			<section>
-				<hr>
-				<input type="submit" name="submit" id="submit" value="Submit">
-				<input type="reset" name="reset" id="reset" value="reset"><br>
-				<button> 
-    <img src="./register.svg" 
-        alt="Submit the form" height="64" width="64">
- </button> 
-			</section>
-		</form>
-	</article>
-</body>
+					<input type="checkbox" name="food" id="hotdogs" value="hotdogs">
+					<label for="hotdogs">Hotdogs</label><br>
+
+					<input type="checkbox" name="food" id="hamburgers" value="hamburgers">
+					<label for="hamburgers">Hamburgers</label>
+        </section>
+
+        <section>
+          <h3>Input <code>type="radio"</code></h3>
+					<p>Number of Siblings:</p>
+
+					<input type="radio" name="siblings" id="0" value="0">
+					<label for="0">0</label>
+
+					<input type="radio" name="siblings" id="1" value="1">
+					<label for="1">1</label>
+
+					<input type="radio" name="siblings" id="2" value="2">
+					<label for="2">2</label>
+
+					<input type="radio" name="siblings" id="3" value="3">
+					<label for="3">3</label>
+
+					<input type="radio" name="siblings" id="4" value="4">
+					<label for="4">4</label>
+
+					<input type="radio" name="siblings" id="5" value="5">
+					<label for="5">5</label>
+					
+					<input type="radio" name="siblings" id="6" value="6">
+					<label for="6">6</label>
+
+					<input type="radio" name="siblings" id="more" value="more">
+					<label for="more">More</label>
+
+        </section>
+
+        <section>
+          <h2></h2>
+        </section>
+        <section>
+          <h2></h2>
+        </section>
+        <section>
+          <h2></h2>
+        </section>
+        <section>
+          <h2></h2>
+        </section>
+        <section>
+          <h2></h2>
+        </section>
+        <section>
+          <h2></h2>
+        </section>
+
+        <section>
+          <hr />
+          <input type="submit" name="submit" id="submit" value="Submit" />
+          <input type="reset" name="reset" id="reset" value="reset" /><br />
+          <button>
+            <img
+              src="./register.svg"
+              alt="Submit the form"
+              height="64"
+              width="64"
+            />
+             
+          </button>
+        </section>
+      </form>
+    </article>
+  </body>
 </html>
