Add image and iframe

--- a/web/form_practice/form_sample.html
+++ b/web/form_practice/form_sample.html
@@ -107,38 +107,13 @@
         </section>
 
         <section>
-          <h2>Audio and Video</h2>
-          <video width="320" height="240" controls muted>
-            <source
-              src="./2278095-sd_640_360_30fps.mp4"
-              type="video/mp4"
-            /></video
-          ><br /><br />
-
-          <audio loop controls>
-            <source src="./sample-6s.mp3" type="audio/mp3" /></audio
-          ><br /><br />
+          <h2></h2>
         </section>
 
         <section>
           <h2></h2>
-          <label for="rating">Your Rating:</label>
-          <input
-            type="range"
-            name="rating"
-            id="rating"
-            min="1"
-            max="5"
-            list="ratings"
-          />
-          <datalist id="ratings">
-            <option value="1" label="1">1</option>
-            <option value="2" label="2">2</option>
-            <option value="3" label="3">3</option>
-            <option value="4" label="4">4</option>
-            <option value="5" label="5">5</option>
-          </datalist>
         </section>
+
         <section>
           <h2></h2>
         </section>
@@ -156,15 +131,14 @@
           <hr />
           <input type="submit" name="submit" id="submit" value="Submit" />
           <input type="reset" name="reset" id="reset" value="reset" /><br />
-          <button>
+          <!-- <button>
             <img
               src="./register.svg"
               alt="Submit the form"
               height="64"
               width="64"
             />
-             
-          </button>
+          </button> -->
         </section>
       </form>
     </article>
