Add cat image with <figure>

--- a/web/form_practice/form_sample.html
+++ b/web/form_practice/form_sample.html
@@ -107,7 +107,14 @@
         </section>
 
         <section>
-          <h2></h2>
+          <h2>
+            Images with <code>&ltfigure&gt;</code> and
+            <code>&ltfigurecap&gt</code>
+          </h2>
+          <figure>
+            <img src="./liesure_cat.JPG" alt="A liesurely cat." width="300" />
+            <figcaption>A liesurely cat.</figcaption>
+          </figure>
         </section>
 
         <section>
