Add black hr below form area

--- a/web/form_practice/form_sample.html
+++ b/web/form_practice/form_sample.html
@@ -107,6 +107,25 @@
         </section>
 
         <section>
+          <h2></h2>
+        </section>
+
+        <section>
+          <hr />
+          <input type="submit" name="submit" id="submit" value="Submit" />
+          <input type="reset" name="reset" id="reset" value="reset" /><br />
+          <!-- <button>
+            <img
+              src="./register.svg"
+              alt="Submit the form"
+              height="64"
+              width="64"
+            />
+          </button> -->
+        </section>
+				<hr style="border-top: 2px solid black;">
+
+        <section>
           <h2>
             Images with <code>&ltfigure&gt;</code> and
             <code>&ltfigurecap&gt</code>
@@ -124,28 +143,13 @@
         <section>
           <h2></h2>
         </section>
-        <section>
-          <h2></h2>
-        </section>
-        <section>
-          <h2></h2>
-        </section>
+
         <section>
           <h2></h2>
         </section>
 
         <section>
-          <hr />
-          <input type="submit" name="submit" id="submit" value="Submit" />
-          <input type="reset" name="reset" id="reset" value="reset" /><br />
-          <!-- <button>
-            <img
-              src="./register.svg"
-              alt="Submit the form"
-              height="64"
-              width="64"
-            />
-          </button> -->
+          <h2></h2>
         </section>
       </form>
     </article>
