--- a/web/css/grid-example.html
+++ b/web/css/grid-example.html
@@ -15,7 +15,7 @@
 				<li><a href="./grid-example.html">Home</a></li>
 				<li><a href="./about.html">About</a></li>
 				<li><a href="./blog.html">Articles</a></li>
-				<li><a href=".contact.html">Contact</a></li>
+				<li><a href="./contact.html">Contact</a></li>
 				<li class="search">Search</li>
 			</ul>
 		</nav>
