Progress on Holy Grail Project

--- a/web/css/grid-holy-grail.html
+++ b/web/css/grid-holy-grail.html
@@ -1,6 +1,25 @@
 <!doctype html>
 <html lang="en">
 	<head>
-		<meta>
+		<meta name="charset" content="UTF-8">
+		<meta	name="viewport" content="width=device-width initial-scale=1.0">
+		<title>Holy Grail Grid Example</title>
 	</head>
+	<body>
+		<header>
+			Computer Philo
+			<ul>
+				<li><a href="./grid-holy-grail.html">Holy Grail</a></li>
+				<li><a href="#about">About Us</a></li>
+				<li><a href="#contact">Contact Us</a></li>
+			</ul>
+		</header>
+		<main>
+			<section class="section">
+				<img src="./grail-8787481_1280.jpg" alt="picture of a chalice">
+				<h1>This is an Example of a Holy Grail Grid Layout</h1>
+
+			</section>
+		</main>
+	</body>
 </html>
