--- a/css/highlight-js.html
+++ b/css/highlight-js.html
@@ -27,10 +27,7 @@
 	</div>
 	<h2>A Code-Block Template</h2>
 	<div class="code-block">
-		<button class="copy-button">Copy</button>
-		<pre><code class="language-html"> Place code here
-
-		</code></pre>
+		<pre><code class="language-html">	</code></pre>
 	</div>
 
 </main>
