--- a/css/css-notes.html
+++ b/css/css-notes.html
@@ -25,12 +25,13 @@
 		<ul>
 			<li><a href="#combinators">Combinators</a></li>
 			<li><a href="#pseudo-classes">Pseudo-classes</a></li>
+			<li><a href="#pseudo-elements">Pseudo-elements</a></li>
 		</ul>
 	</aside>
 	<main>
 		<h1>CSS Notes</h1>
-		<article>
-			<h2 id="combinators">Combinators</h2>
+		<article id="combinators">
+			<h2>Combinators</h2>
 
 			<h3>Descendant combinator</h3>
 			<p>A combinator represented by a single space (<code class="inline-code"> </code>) character, combines two
@@ -52,8 +53,8 @@
 				follow the first element (not necessarily immediately) and share the same parent element.</p>
 		</article>
 
-		<article>
-			<h2 id="pseudo-classes">Pseudo-classes</h2>
+		<article id="pseudo-classes">
+			<h2>Pseudo-classes</h2>
 			<p>Pseudo-classes are used to define styles for a specific <strong>state</strong> or <strong>condition</strong> of
 				an html element. They are applied in CSS by using <code class="inline-code">selector:keyword</code>, where <code
 					class="inline-code">keyword</code> indicates the state or condition. For example <code
@@ -135,6 +136,201 @@
 			opacity: 0.5;
 		}
 	</code></pre>
+			</div>
+
+			<h3>Conditional Pseudo-classes</h3>
+			<p>Condional pseudo-classes are typically applied to item lists and tables and they depend on specific
+				<strong>position-based states</strong>. They allow you to target specific items, such as a specific list item
+				among list elements. Some examples include
+				<code class="inline-code">first-of-type</code>, <code class="inline-code">last-of-type</code>, <code
+					class="inline-code">nth-of-type</code>, and <code class="inline-code">nth-last-of-type</code>. Below is a
+				simple table in which the even numbered rows have been modified to make it more readable.
+			</p>
+			<table class="example-table">
+				<thead>
+					<tr>
+						<th>Label</th>
+						<th>Value</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>Row 1</td>
+						<td>Value 1</td>
+					</tr>
+					<tr>
+						<td>Row 2</td>
+						<td>Value 2</td>
+					</tr>
+					<tr>
+						<td>Row 3</td>
+						<td>Value 3</td>
+					</tr>
+					<tr>
+						<td>Row 4</td>
+						<td>Value 4</td>
+					</tr>
+					<tr>
+						<td>Row 5</td>
+						<td>Value 5</td>
+					</tr>
+				</tbody>
+			</table>
+			<p>Here is the styling, note the nth-child, near the bottom.</p>
+			<div class="code-block">
+				<pre><code class="language-css">	table {
+		border-collapse: collapse;
+		width: 50%;
+		margin: 20px;
+		font-family: sans-serif;
+	}
+		
+	th, td {
+		border: 1px solid #333;
+		padding: 8px 12px;
+		text-align: left;
+	}
+		
+	thead {
+		background-color: #ccc;
+	}
+		
+	tbody tr:nth-child(even) {
+		background-color: #e6f4e6; /* pale green */
+	}
+					</code></pre>
+			</div>
+			<p>Another application that can be useful is styling the first paragraph of an article using <code
+					class="inline-code">first-of-type</code>.</p>
+			<div class="first">
+				<h4>This is a Brilliant Article</h4>
+				<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa quae aspernatur doloremque laudantium, facilis
+					illum at ipsam sunt. Cum minima debitis nam quos sequi perferendis aliquam saepe commodi natus optio.</p>
+				<p>Ad dolore dignissimos asperiores dicta facere optio quod commodi nam tempore recusandae. Rerum sed nulla eum
+					vero expedita ex delectus voluptates rem at neque quos facere sequi unde optio aliquam!</p>
+			</div>
+			<p>Here is the CSS code:</p>
+			<div class="code-block">
+				<pre><code class="language-css">	.first {
+		border: #004080 1px solid;
+		padding: 0.5em;
+		border-radius: 5px;
+	}
+		
+	.first p:first-of-type {
+		font-weight: bold;
+		color: white;
+		background-color: #004080;
+		padding: .75em;
+		margin: .5em 0;
+		border-radius: 5px;
+	}
+			</code></pre>
+			</div>
+		</article>
+
+		<!--------------- Pseudo-Elements ---------------->
+
+		<article id="pseudo-elements">
+			<h2>Pseudo-elements</h2>
+			<p>Pseudo-elements in CSS allow you to style specific parts of an element's content without adding extra HTML. It
+				is applied by adding a keyword to a selector, quite similar to pseudo-classes. They act as if you're selecting a
+				subpart of an element—like the first letter, first line, or a generated piece of content.</p>
+			<p>They are written with two colons (<code class="inline-code">::</code>), to distinguish them from pseudo-classes
+				which use one colon <code class="inline-code">:</code>.</p>
+			<h3>Uses</h3>
+			<ul>
+				<li>Add decorative content (<code class="inline-code">::before</code>, <code class="inline-code">::after</code>)
+				</li>
+				<li>Stylize large initial letters (<code class="inline-code">::first-letter</code>), or initial lines of text
+					(<code class="inline-code">::first-line</code>)</li>
+				<li>Highlight selected text (<code class="inline-code">::selection</code>)</li>
+				<li>Customize list bullets (<code class="inline-code">::marker</code>)</li>
+				<li>Enhance readability or user feedback without changing the HTML structure</li>
+			</ul>
+
+			<p>Here is a list of commonly used pseudo-elements:</p>
+			<table class="pseudo-elements-table" cellpadding="8" cellspacing="0">
+				<thead>
+					<tr>
+						<th>Pseudo-Element</th>
+						<th>Purpose</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td><code>::before</code></td>
+						<td>Adds content before an element (e.g., emoji or label)</td>
+					</tr>
+					<tr>
+						<td><code>::after</code></td>
+						<td>Adds content after an element (e.g., icon or symbol)</td>
+					</tr>
+					<tr>
+						<td><code>::first-letter</code></td>
+						<td>Styles the first letter of a block of text</td>
+					</tr>
+					<tr>
+						<td><code>::first-line</code></td>
+						<td>Styles the first physical line of text in a block</td>
+					</tr>
+					<tr>
+						<td><code>::selection</code></td>
+						<td>Styles text when it is highlighted by the user</td>
+					</tr>
+					<tr>
+						<td><code>::marker</code></td>
+						<td>Customizes list item bullets or numbering</td>
+					</tr>
+				</tbody>
+			</table>
+			<div class="pseudo-elements-example">
+				<h3>Here is an Example of Using Pseudo-elements</h3>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit eius, doloribus perspiciatis ipsum! Officiis
+					voluptatem repudiandae veniam aliquid hic ab tenetur!</p>
+				<p class="second-paragraph">Lorem catsum dolor sit amet. Repellat placeat quas rerum accusamus, eligendi
+					quisquam
+					rem mollitia exercitationem a consectetur sed delectus ratione quo.</p>
+				<p>My List</p>
+				<ul>
+					<li>Item 1</li>
+					<li>Item 2</li>
+					<li>Item 3</li>
+				</ul>
+			</div>
+			<p>Here is the CSS below. Note the complex selector combinations that are available to precisely select what you
+				want.</p>
+			<div class="code-block">
+				<pre><code class="language-css">	.pseudo-elements-example {
+		border: #004080 1px solid;
+		padding: 0.5em;
+		border-radius: 5px;
+		margin: 1em 0;
+	}
+	
+	.pseudo-elements-example h3+p::first-letter {
+		font-size: 2em;
+		font-weight: bold;
+		color: #004080;
+		float: left;
+		margin-right: 0.25em;
+	}
+	
+	.second-paragraph::first-line {
+		font-weight: bold;
+		color: #004080;
+	}
+	
+	.pseudo-elements-example li::marker {
+		content: "😍 ";
+		color: #004080;
+		font-weight: bold;
+	}
+	
+	.pseudo-elements-example p:nth-child(3)::before {
+		content: "😸 ";
+	}
+					</code></pre>
 			</div>
 		</article>
 	</main>
