--- a/css/highlight-js.html
+++ b/css/highlight-js.html
@@ -27,7 +27,7 @@
 	</div>
 	<h2>A Code-Block Template</h2>
 	<div class="code-block">
-		<pre><code class="language-html">	</code></pre>
+		<pre><code class="language-css">	</code></pre>
 	</div>
 
 </main>
