Add a note about putting emojis in quotes for "content" properties.

--- a/css/css-notes.html
+++ b/css/css-notes.html
@@ -298,8 +298,8 @@
 					<li>Item 3</li>
 				</ul>
 			</div>
-			<p>Here is the CSS below. Note the complex selector combinations that are available to precisely select what you
-				want.</p>
+			<p>Here is the CSS below. Note the complex selector combinations that are available to precisely select what you want.</p>
+			<p>Also note that when you use something like an emoji as the value for a <code class="inline-code">content</code> property, you must <em>close it in quotes</em> because it must be viewed as text by CSS.</p>
 			<div class="code-block">
 				<pre><code class="language-css">	.pseudo-elements-example {
 		border: #004080 1px solid;
