--- a/uomwebdev/DOM-methods.html
+++ b/uomwebdev/DOM-methods.html
@@ -1,126 +1,160 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DOM Methods</title>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
-    <header>
-      <h1>Some Commonly Used DOM Methods</h1>
-      <p id="intro">
-        This page will cover commonly used DOM methods that are accessed with
-        JavaScript.
-      </p>
-    </header>
 
-    <main>
-      <section>
-        <h2>Finding Elements with JavaScript</h2>
-        <h3>Finding an HTML Element by Id</h3>
-        <p id="ex2">Print this entire element to the console.</p>
-        <button id="button2">Print Output</button>
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>DOM Methods</title>
+	<link rel="stylesheet" href="styles.css" />
+</head>
 
-        <script>
-          const ex2 = document.getElementById("ex2");
-          const button2 = document.getElementById("button2");
-          button2.addEventListener("click", () => {
-            return console.log(ex2);
-          });
-        </script>
+<body>
+	<header>
+		<h1>Some Commonly Used DOM Methods</h1>
+		<p id="intro">
+			This page will cover commonly used DOM methods that are accessed with
+			JavaScript.
+		</p>
+	</header>
 
-        <h3>Finding HTML Elements by Tag Name</h3>
-        <div id="ex3">
-          <p>Print these two paragraph elements to the console.</p>
-          <p>
-            And use array indexing and the <code>style</code> property to turn
-            this second element bold.
-          </p>
-          <button id="button3">Print Output and Change Style</button>
-        </div>
+	<main>
+		<section>
+			<h2>Finding Elements with JavaScript</h2>
+			<h3>Finding an HTML Element by Id</h3>
+			<p id="ex2">Print this entire element to the console.</p>
+			<button id="button2">Print Output</button>
 
-        <script>
-          const button3 = document.getElementById("button3");
-          // First get the div and its contents
-          const getDiv = document.getElementById("ex3");
-          // Then get all of the <p> elements within it, in an array
-          const getP = getDiv.getElementsByTagName("p");
-          button3.addEventListener("click", () => {
-            for (const item of getP) {
-              console.log(item);
-            }
-            // Use indexing to get an item out of the array
-            getP[1].style.fontWeight = "bold";
-          });
-        </script>
+			<script>
+				const ex2 = document.getElementById("ex2");
+				const button2 = document.getElementById("button2");
+				button2.addEventListener("click", () => {
+					return console.log(ex2);
+				});
+			</script>
 
-        <h3>Finding HTML Elements by Class Name</h3>
-        <p class="ex5 ex4">
-          The <code>getElementByClass()</code> method is used to retrieve all
-          members of a class, or classes.
-        </p>
-        <p class="ex4 ex5">
-          We can retrieve all elements with one or multiple class names. And
-          since it returns an array, we can also access its members using
-          indexing. When using mulitple classes,
-          <code>getElementByClass()</code>, only works on those elements
-          including both, of the elements.
-        </p>
-        <p class="ex5 ex4">
-          In this example we will first change the styling of all three of these
-          first three paragraphs with the <code>class="ex4"</code> AND
-          <code>class="ex5"</code> selectors. And we will change the background
-          color of the middle paragraph with indexing.
-        </p>
-        <p class="ex4">
-          It will not work on this paragraph, because it only has a class of
-          <code>ex5</code>, which is listed second in the method.
-        </p>
-        <p class="ex5">
-          Or this paragragh that only has <code>ex5</code> as its class.
-        </p>
-        <button id="button4">Change the Styles</button>
+			<h3>Finding HTML Elements by Tag Name</h3>
+			<div id="ex3">
+				<p>Print these two paragraph elements to the console.</p>
+				<p>
+					And use array indexing and the <code>style</code> property to turn
+					this second element bold.
+				</p>
+				<button id="button3">Print Output and Change Style</button>
+			</div>
 
-        <script>
-          document.addEventListener("DOMContentLoaded", () => {
-            const getClass = document.getElementsByClassName("ex4 ex5"); // or "ex4 ex5"
-            const button4 = document.getElementById("button4");
+			<script>
+				const button3 = document.getElementById("button3");
+				// First get the div and its contents
+				const getDiv = document.getElementById("ex3");
+				// Then get all of the <p> elements within it, in an array
+				const getP = getDiv.getElementsByTagName("p");
+				button3.addEventListener("click", () => {
+					for (const item of getP) {
+						console.log(item);
+					}
+					// Use indexing to get an item out of the array
+					getP[1].style.fontWeight = "bold";
+				});
+			</script>
 
-            button4.addEventListener("click", () => {
-              // getElementsByClassName returns an array that we can iterate
-              for (const elem of getClass) {
-                elem.style.border = "1px solid black";
-                elem.style.padding = "1em";
-              }
-              // highlight the second element; make sure it exitst
-              if (getClass[1]) {
-                getClass[1].style.backgroundColor = "yellow";
-              }
-            });
-          });
-        </script>
-        <!-- Need to add next, "Finding HTML elements by CSS Selectors" -->
-        <!-- https://www.w3schools.com/js/js_htmldom_elements.asp -->
-      </section>
+			<h3>Finding HTML Elements by Class Name</h3>
+			<p class="ex5 ex4">
+				The <code>getElementsByClass()</code> method is used to retrieve all
+				members of a class, or classes. Note that 'Elements' is plural.
+			</p>
+			<p class="ex4 ex5">
+				We can retrieve all elements with one or multiple class names. And
+				since it returns an array, we can also access its members using
+				indexing. When using mulitple classes as arguments,
+				<code>getElementsByClass()</code>, only returns those elements that have
+				both (or all) of the elements.
+			</p>
+			<p class="ex5 ex4">
+				In this example we will first change the styling of all three of these first three paragraphs with the
+				<code>class="ex4"</code> AND <code>class="ex5"</code> selectors. And we will change the background color of the
+				middle paragraph with indexing.
+			</p>
+			<p class="ex4">
+				It will not work on this paragraph, because it only has a class of
+				<code>ex5</code>, which is listed second in the method.
+			</p>
+			<p class="ex5">
+				Or this paragragh that only has <code>ex5</code> as its class.
+			</p>
+			<button id="button4">Change the Styles</button>
 
-      <hr />
+			<script>
+				document.addEventListener("DOMContentLoaded", () => {
+					const getClass = document.getElementsByClassName("ex4 ex5"); // or "ex4 ex5"
+					const button4 = document.getElementById("button4");
 
-      <section>
-        <h2>Modifying HTML with Javascript</h2>
-        <h3>Using <code>innerHTML</code></h3>
-        <p id="ex1">This is the original text.</p>
-        <button id="button1">Change Text</button><br />
+					button4.addEventListener("click", () => {
+						// getElementsByClassName returns an array that we can iterate
+						for (const elem of getClass) {
+							elem.style.border = "1px solid black";
+							elem.style.padding = "1em";
+						}
+						// highlight the second element; make sure it exitst
+						if (getClass[1]) {
+							getClass[1].style.backgroundColor = "yellow";
+						}
+					});
+				});
+			</script>
+			<!-- Need to add next, "Finding HTML elements by CSS Selectors" -->
+			<!-- https://www.w3schools.com/js/js_htmldom_elements.asp -->
+		</section>
 
-        <script>
-          const ex1 = document.getElementById("ex1");
-          const button1 = document.getElementById("button1");
-          button1.addEventListener("click", () => {
-            ex1.innerHTML = "My new text using <code>innerHTML</code>.";
-          });
-        </script>
-      </section>
-    </main>
-    <!-- <script src="script.js"></script> -->
-  </body>
+		<hr />
+
+		<section>
+			<h2>Modifying HTML with Javascript</h2>
+			<h3>Using <code>innerHTML</code></h3>
+			<p id="ex1">This is the original text.</p>
+			<button id="button1">Change Text</button><br />
+
+			<script>
+				const ex1 = document.getElementById("ex1");
+				const button1 = document.getElementById("button1");
+				button1.addEventListener("click", () => {
+					ex1.innerHTML = "My new text using <code>innerHTML</code>.";
+				});
+			</script>
+			<h3>Changing the Value of an Attribute</h3>
+			<p>To change the value of an attribute, we us the element's <code>attribute</code> property.
+				In
+				this example we will change the <code>&ltsrc&gt</code> attribute of the <code>&ltimg&gt</code> element.</p>
+			<p><img id="cat" src="sanguin_cat.jpg" alt="Sanguin Cat" style="width:300px"></p>
+			<button id="button5" type="button">Change the Cat!</button>
+
+			<script>
+				const button5 = document.getElementById('button5');
+				const cat = document.getElementById('cat');
+				button5.onclick = () => {
+					cat.src = "happy_cat.jpg";
+				};
+			</script>
+
+			<h3>Dynamic HTML content</h3>
+			<p>Using <code>innerHTML</code> we can update an element's text on page load, or when a user interacts with it.
+			</p>
+			<p id="date"></p>
+			<button type="button" id="button6">Update</button>
+
+			<script>
+				document.getElementById('date').innerHTML = 'Date: ' + Date();
+				const dateTime = document.getElementById('date');
+				const b6 = document.getElementById('button6');
+				b6.onclick = () => {
+					dateTime.innerHTML = Date();
+				}
+			</script>
+
+			<h3>Using <code>document.write()</code></h3>
+			<p></p>
+		</section>
+	</main>
+	<!-- <script src="script.js"></script> -->
+</body>
+
 </html>
