--- a/uomwebdev/DOM-methods.html
+++ b/uomwebdev/DOM-methods.html
@@ -31,7 +31,7 @@
 					return console.log(ex2);
 				});
 			</script>
-
+			<hr class="sub-section-hr">
 			<h3>Finding HTML Elements by Tag Name</h3>
 			<div id="ex3">
 				<p>Print these two paragraph elements to the console.</p>
@@ -56,6 +56,7 @@
 					getP[1].style.fontWeight = "bold";
 				});
 			</script>
+			<hr class="sub-section-hr">
 
 			<h3>Finding HTML Elements by Class Name</h3>
 			<p class="ex5 ex4">
@@ -67,7 +68,7 @@
 				since it returns an array, we can also access its members using
 				indexing. When using mulitple classes as arguments,
 				<code>getElementsByClass()</code>, only returns those elements that have
-				both (or all) of the elements.
+				all of the elements listed.
 			</p>
 			<p class="ex5 ex4">
 				In this example we will first change the styling of all three of these first three paragraphs with the
@@ -76,7 +77,7 @@
 			</p>
 			<p class="ex4">
 				It will not work on this paragraph, because it only has a class of
-				<code>ex5</code>, which is listed second in the method.
+				<code>ex4</code>.
 			</p>
 			<p class="ex5">
 				Or this paragragh that only has <code>ex5</code> as its class.
@@ -104,12 +105,12 @@
 			<!-- Need to add next, "Finding HTML elements by CSS Selectors" -->
 			<!-- https://www.w3schools.com/js/js_htmldom_elements.asp -->
 		</section>
-
-		<hr />
+		<hr class="section-hr" />
 
 		<section>
-			<h2>Modifying HTML with Javascript</h2>
+			<h2>Modifying HTML Elements with Javascript</h2>
 			<h3>Using <code>innerHTML</code></h3>
+			<p>We can change an element's text using <code>innerHTML</code>.</p>
 			<p id="ex1">This is the original text.</p>
 			<button id="button1">Change Text</button><br />
 
@@ -120,6 +121,8 @@
 					ex1.innerHTML = "My new text using <code>innerHTML</code>.";
 				});
 			</script>
+			<hr class="sub-section-hr">
+
 			<h3>Changing the Value of an Attribute</h3>
 			<p>To change the value of an attribute, we us the element's <code>attribute</code> property.
 				In
@@ -134,6 +137,7 @@
 					cat.src = "happy_cat.jpg";
 				};
 			</script>
+			<hr class="sub-section-hr">
 
 			<h3>Dynamic HTML content</h3>
 			<p>Using <code>innerHTML</code> we can update an element's text on page load, or when a user interacts with it.
@@ -149,10 +153,72 @@
 					dateTime.innerHTML = Date();
 				}
 			</script>
+			<hr class="sub-section-hr">
 
 			<h3>Using <code>document.write()</code></h3>
-			<p></p>
+			<p><code>document.write()</code> is generally discouraged due to its potential to overwrite the entire document
+				and its synchronous nature, which can block rendering. To modify an element, <code>innerHTML</code> can be used
+				instead.</p>
 		</section>
+		<hr class="section-hr">
+
+		<form>
+			<h2>JavaScript Form Validation</h2>
+
+			<h3>Required Fields</h3>
+			<p>This 'Name' field is marked as required in the HTML.</p>
+			<form action="https://httpbin.org/post" method="post" id="name-form">
+				<label for="fname">Name:</label>
+				<input type="text" id="fname" name="fname"><br><br>
+
+				<button type="submit">Submit</button>
+			</form>
+
+			<script>
+				// const form = document.getElementById('name-form');
+				// form.addEventListener('submit', (event) => {
+				// 	if (!form.reportValidity()) {
+				// 		event.preventDefault();
+				// 	}
+				// });
+				document.getElementById("name-form").addEventListener("submit", function (event) {
+					const fname = document.getElementById("fname");
+					if (fname.value.trim() === "") {
+						event.preventDefault(); // stop submission
+						fname.setCustomValidity("Please enter your name.");
+						fname.reportValidity();
+					} else {
+						fname.setCustomValidity(""); // clear error
+					}
+				});
+
+			</script>
+
+			<h3>Input Validation</h3>
+			<p>We can use JavaScript to make sure that our forms are filled out properly <em>before</em> the data is sent to
+				our server. This reduces bandwidth use, as well as the server's workload. Below is an example of checking to
+				make sure that a number between 1 and 10 is entered.</p>
+			<p>
+			<form action="https://httpbin.org/post" method="post" id="num-form">
+				<label for="number">Enter a number between 1 and 10:</label>
+				<input type="text" id="number" name="number" required aria-required="true">
+				</p>
+				<label for="numButton"></label>
+				<button type="submit" id="numButton">Submit</button>
+			</form>
+
+			<script>
+				const form = document.getElementById("num-form");
+				form.addEventListener('submit', (event) => {
+					if ()
+				})
+			</script>
+
+			</section>
+			<hr class="section-hr">
+
+			<h2>Modifying CSS</h2>
+
 	</main>
 	<!-- <script src="script.js"></script> -->
 </body>
